--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
     <title>Aula virtual</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header> 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="index.html"><img src="#" height="50" class="d-inline-block align-top" alt="logo-ispc"></a>
+          <a class="navbar-brand" href="./views/pag-inicio.html"><img src="#" height="50" class="d-inline-block align-top" alt="logo-ispc"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav mr-auto ml-auto">
-              <a class="nav-link primordial" href="views/productos.html">Iniciar Sesión</a>
-            </div>
-            <div>
-              <a href="views/carrito.html" class="car-logo"><i class="fas fa-shopping-cart" aria-hidden="true"></i></a>
+              <a class="nav-link primordial" href="index.html">Iniciar Sesión</a>
             </div>
           </div>
         </nav>
       </header>
-    <main class="container">
-        <h1 class="titulo">
+    <main>
+        <div class="container-login">
+          <h1>
             ¡Bienvenido al aula virtual del ISPC!
-        </h1>
-        <div class="container">
-            <form class="mx-auto">
+            </h1>
+          <div class="padre">
+            <h2>Ingreso al Aula Virtual 2021</h2>
+            <form class=" formulario">
                 <div class="mx-auto">
                   <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                  <div id="emailHelp" class="form-text">
+                    email.prueba@gmail.com
+                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Contraseña</label>
@@ -44,12 +46,13 @@
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
                   <label class="form-check-label" for="exampleCheck1">Recordar sesión</label>
                 </div>
-                <a href="https://acceso.ispc.edu.ar/login/forgot_password.php">¿Olvidó su nombre de usuario o contraseña?</a>
-                <div>
-                    <button type="submit" class="btn btn-info">Ingresar</button>
-                    <button type="submit" class="btn btn-primary">Registrarse</button>
+                <a href="./views/form-contraseña.html">¿Olvidó su nombre de usuario o contraseña?</a>
+                <div class="botones">
+                    <button type="submit" class="btn btn-info boton-usuario">Ingresar</button>
+                    <button type="#" class="btn btn-primary"><a class="boton-registro" href="./views/registro.html">Registrarse</a></button></a>
                 </div>
-              </form>
+            </form>
+          </div>
         </div>
     </main>
     <footer class="container-footer"></div>
