--- a/.github/index.html
+++ b/.github/index.html
@@ -1,72 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula Virtual</title>
+    <link rel="icon" type="image/x-icon" href="../imagenes/favicon.ico">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="container">
-                <div class="row">
-                    <div class="col-9">
-                        <h1 class="display-4 cabecera">Bienvenidos a tu Aula Virtual</h1>
-                    </div>          
-                    <div class="col-3">
-                        <img src="imagenes/bandera.png" class="bandera" alt="logo bandera Argentina" />
-                    </div>    
+        <section class="container-fluid cuidadano-digital">
+            <div class="row">
+                <div class="col">
+                    <a href="https://cidi.cba.gov.ar/portal-publico/" target="_blank"><img src="../imagenes/cidi.png" alt="logo cuidadano digital"></a>
                 </div>
+                <div class="container-fluid linea-azul"></div>
             </div>
-        </div>
+        </section>
     </header>
     <nav class="navbar justify-content-end">
         <ul class="">
             <li class="navbar-brand nav-link active"><a href="#">A cerca de</a></li>
             <li class="navbar-brand nav-link active"><a href="#">Acceso</a></li>
-            <li class="navbar-brand nav-link active"><a href="#">Novedades</a></li>
+            <li class="navbar-brand nav-link active"><a href="#">Nosotros</a></li>
         </ul>
     </nav>
-    <main class="container">
-        <section class="row">
-            <article class="col-9 article">
-                <div class="container">
-                    <div >
-                        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis tempora accusantium nobis inventore maiores voluptates nihil magnam quis? Delectus laborum velit doloribus reprehenderit, id natus ipsum corrupti ut earum modi!</p>
-                    </div>
-                </div>
-            </article>
-        </section>
-    </main>    
-        <section class="row justify-content-end justify-content-start">
-            <aside class="col-3 justify-content-end aside">
+    <main>
+        <section class="container">
+            <div class="row">
                 <div class="col">
-                    <h2 class="efemerides">Efemerides</h2>
-                            <div>
-                                <a href="http://www.google.com/calendar/event?action=TEMPLATE&text=Example%20Event&dates=20131124T010000Z/20131124T020000Z&details=Event%20Details%20Here&location=123%20Main%20St%2C%20Example%2C%20NY"><h2>Calendario</h2></a>
-                            </div>
+                    <h1 class="text-center">Ingreso al Aula Virual</h1>
+                    <form class="mx-auto">
+                        <div class="mx-auto">
+                            <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Su dirección de correo no será comprartido por esta plataforma.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="">
+                            <label class="form-check-label" for="exampleCheck1">Recordar sesión</label>
+                        </div>
+                        <div>
+                            <button type="submit" class="btn btn-success">Ingresar</button>
+                            <button type="submit" class="btn btn-primary">Registrarse</button>
+                        </div>
+                        <a  class="text-danger"href="#">¿Olvidó su nombre de usuario o contraseña?</a>
+                    </form>
                 </div>
+            </div>
         </section>
-        
-    
-    </aside>
+    </main>
     <footer class="container-fluid footer">
-        <div class="row alumnos">
-            <div class="col-9 align-self-center">
-                <span>Desarrollado por alunmos del</span>
+        <div class="row">
+            <div class="col">
+                <p>Desarrollado por alumnos del ISPC</p>
+                <span> Pablo Alejandro Bajar - Luciano Cancinos - Gustavo Emilio Lima</span>
             </div>
-            <div class="col-3">
-                <img src="imagenes/ispc.png" class="ispc" alt="logo ISPC" />
+            <div>
+                <img src="../imagenes/logo_ispc.png" alt="logo ispc" class="attachment-medium_large size-medium_large>
             </div>
-            <p class="grupo">Pablo A. Bajar - Luciano Cancinos - Gustavo E. Lima - Vanina E. Nuñez</p>
         </div>
     </footer>
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
