pagina de contacto

--- a/.github/index.html
+++ b/.github/index.html
@@ -22,9 +22,9 @@
     </header>
     <nav class="navbar justify-content-end">
         <ul class="">
-            <li class="navbar-brand nav-link active"><a href="#">A cerca de</a></li>
+            <li class="navbar-brand nav-link active"><a href="#">Inicio</a></li>
             <li class="navbar-brand nav-link active"><a href="#">Acceso</a></li>
-            <li class="navbar-brand nav-link active"><a href="#">Nosotros</a></li>
+            <li class="navbar-brand nav-link active"><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <main>
