--- a/.github/contacto.html
+++ b/.github/contacto.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula Virtual</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../imagenes/favicon.ico">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
@@ -32,7 +35,7 @@
             <div class="row">
                 <div class="col">
                     <h1 class="text-center nosotros">Sobre nosotros...</h1>
-                    <p>Somos un grupo de estudiantes del primer año Instuto Politécnico Córboba de la carrera Técnico en Desarrollo Web y Aplicaciones Digitales, desarrollamos este sitio web con el proposito de mostrar nuestro avance en la carrera y con él dejar en un futuro un desarrolo para la sociedad cordobesa y porque no para el resto del país</p>
+                    <p class="a-cerca-de">Somos un grupo de estudiantes del primer año Instuto Politécnico Córboba de la carrera Técnico en Desarrollo Web y Aplicaciones Digitales, desarrollamos este sitio web con el proposito de mostrar nuestro avance en la carrera y con él dejar en un futuro un desarrolo para la sociedad cordobesa y porque no para el resto del país</p>
                     
                 </div>
             </div>
