añadiendo inicio y registro

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header> 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="./views/pag-inicio.html"><img src="#" height="50" class="d-inline-block align-top" alt="logo-ispc"></a>
+          <a class="navbar-brand" href="./views/inicio.html"><img src="#" height="50" class="d-inline-block align-top" alt="logo-ispc"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -55,6 +55,15 @@
           </div>
         </div>
     </main>
-    <footer class="container-footer"></div>
+    <footer class="container-fluid-sm">
+        <div class="row copy">
+            <div class="col-lg-6 copyright">
+              <p> &copy; 2020 Todos los derechos reservados. |<a href="https://www.linkedin.com/in/luciano99/"> Cancinos Luciano</a> Pablo Alejandro Bajar | Gustavo Emilio Lima</p>
+            </div>
+            <div class="col-lg-6 information">
+              <a href="#">Politicas de prividad</a> | <a href="#">Terminos y condiciones</a>
+            </div>
+      </div>
+    </footer>
 </body>
 </html>
